# PBXProject

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  PBXProject  README.md  cmake_install.cmake
.github/workflows/: c-cpp.yml  cmake.yml
PBXProject/: CMakeLists.txt
PBXProject.xcodeproj/: project.pbxproj
PBXProject.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PBXProject/src/: main.cpp  option.cpp  option.h
PBXProject/src/xcodeproj/pbxproj/pbxObject/: Util.cpp  pbxCreate.cpp  pbxParser.cpp  pbxUUID.cpp  pbxUUID.hpp  pbxWriter.cpp  pbxWriter.hpp
src/: main.cpp
src/xcodeproj/pbxproj/pbxObject/: Util.cpp  Util.h  pbxCreate.cpp  pbxCreate.hpp  pbxObjectSection.cpp  pbxObjectSection.h  pbxParser.h  pbxProject.cpp  pbxProject.hpp  pbxUUID.cpp  pbxUUID.hpp  pbxWriter.cpp  pbxWriter.hpp
